--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,4 @@
+autopep8==2.3.2
 beautifulsoup4==4.13.4
 blinker==1.9.0
 certifi==2025.4.26
@@ -6,9 +7,16 @@ click==8.2.0
 colorama==0.4.6
 Flask==3.1.1
 idna==3.10
+iniconfig==2.1.0
 itsdangerous==2.2.0
 Jinja2==3.1.6
 MarkupSafe==3.0.2
+packaging==25.0
+pluggy==1.5.0
+pycodestyle==2.13.0
+pytest==8.3.5
+PyYAML==6.0.2
+random_word==1.0.13
 requests==2.32.3
 soupsieve==2.7
 typing_extensions==4.13.2
